// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> should create style tag at fixed with pseudo-elements 1`] = `
<style>
  
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: undefined;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
            opacity: 0;
          }
        
</style>
`;

exports[`<BackgroundImage /> should create style tag with pseudo-elements 1`] = `
<style>
  
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: lightgray;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
            opacity: 0;
          }
        
</style>
`;

exports[`<BackgroundImage /> should render fixed size images 1`] = `
<div>
  <div
    class="fixedImage gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline; width: 100px; height: 100px;"
  >
    <style>
      
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: undefined;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
            opacity: 0;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" /&gt;&lt;source srcSet="some srcSet" /&gt;&lt;img width="100" height="100" src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render fluid images 1`] = `
<div>
  <div
    class="fixedImage gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: lightgray;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
            opacity: 0;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with another external class 1`] = `
<div>
  <div
    class="fixedImage test gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: lightgray;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: 'repeat-y';
            opacity: 0;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with single external class 1`] = `
<div>
  <div
    class="fixedImage gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <style>
      
          .gatsby-background-image-test:before,
          .gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-test:before {
            z-index: -101;
            background-color: lightgray;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
          }
          .gatsby-background-image-test:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
            opacity: 0;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work without external class 1`] = `
<div>
  <div
    class=" gatsby-background-image-aqirlqp gatsby-image-wrapper"
    style="position: relative; overflow: hidden;"
  >
    <style>
      
          .gatsby-background-image-aqirlqp:before,
          .gatsby-background-image-aqirlqp:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            transition: opacity 0.25s ease-in-out;
            -webkit-transition: opacity 0.25s ease-in-out;
            -moz-transition: opacity 0.25s ease-in-out;
            -o-transition: opacity 0.25s ease-in-out;
          }
          .gatsby-background-image-aqirlqp:before {
            z-index: -101;
            background-color: undefined;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
          }
          .gatsby-background-image-aqirlqp:after {
            z-index: -100;
            background-image: url(test_image.jpg);
            background-repeat: no-repeat;
            opacity: 0;
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      testempty
    </h1>
  </div>
</div>
`;
